Bug 146999 - Artifacts when scrolling up and down
Summary: Artifacts when scrolling up and down
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0
Keywords: bibisected, bisected, regression
: 146978 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-01-26 11:44 UTC by Xisco Faulí
Modified: 2022-01-31 17:17 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
screencast (1.84 MB, video/mp4)
2022-01-26 11:44 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2022-01-26 11:44:49 UTC
Created attachment 177802 [details]
screencast

Steps to reproduce:
1. Open Draw
2. Scroll up and down a few times

-> Artifacts will be displayed on the screen

Reproduced in

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 0c3b8792b712e939d2ad524d554f96616b4844be
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: x11
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2022-01-26 11:45:45 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=9a850dd9f3c221660b6259bdfd64a77343f2256c

author	Noel Grandin <noel.grandin@collabora.co.uk>	2022-01-12 10:27:38 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2022-01-12 14:45:30 +0100
commit 9a850dd9f3c221660b6259bdfd64a77343f2256c (patch)
tree a358210df36d9df53e0e614a3bb702e0e604750c
parent eebe4747d2d13545004937bb0267ccfc8ab9d63f (diff)
used cache value in ViewObjectContact::getPrimitive2DSequence (2nd attempt)

Bisected with: bibisect-linux64-7.4

Adding Cc: to Noel Grandin
Comment 2 Xisco Faulí 2022-01-26 12:19:57 UTC
The same commit also causes this problem:

1. Open draw
2. Close Draw
3. Open impress
4. The dot lines of the second object ( the one with 'Click to Add text' ) are not displayed
Comment 3 BogdanB 2022-01-26 18:45:17 UTC
Confirm with
Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 4935bb372e3618eca105997c83101aa2b3d422e3
CPU threads: 16; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 4 phv 2022-01-28 16:25:59 UTC
*** Bug 146978 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2022-01-31 16:43:49 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/44febe0ea815405ceb90ace5430f11fde634d89b

tdf#146999 draw, artifacts when scrolling up and down

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.