tdf#146999 draw, artifacts when scrolling up and down

sigh, not even draw manages to get invalidation right

regression from
    commit 9a850dd9f3c221660b6259bdfd64a77343f2256c
    Date:   Wed Jan 12 10:27:38 2022 +0200
used cache value in ViewObjectContact::getPrimitive2DSequence (2nd
attempt)

Change-Id: I2692ac6933a3956eb98f48ff0875cdc0c933bd8d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/129221
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>